--- a/client/src/theme/index.css
+++ b/client/src/theme/index.css
@@ -11,8 +11,14 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+
+  #root{
+    height:100%
+}
+
   html {
     margin: 0;
+    height:100%;
 }
 
   #feeStruct{
@@ -62,6 +68,14 @@ body {
 .loginButton button{
   border-radius:50px;
   margin-right:10px;
+}
+
+.cardJumbo{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .curvyButton button{
