--- a/client/src/theme/index.css
+++ b/client/src/theme/index.css
@@ -1,7 +1,14 @@
-body {
+html {
     margin: 0;
+    height: 100%;
+}
+
+body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     background-image: linear-gradient(#3736A1, #8283C5);
+    background-attachment: fixed;
+    color: white;
+    margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -14,9 +21,13 @@ code {
     height: 100%
 }
 
-html {
+.jumbotron {
     margin: 0;
-    height: 100%;
+    background: none;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: white;
 }
 
 #feeStruct {
@@ -67,10 +78,6 @@ html {
 
 .discoverCol {
     margin: 20px;
-}
-
-.jumbotron {
-    margin: 0;
 }
 
 .loginButton button {
