--- a/client/src/theme/index.css
+++ b/client/src/theme/index.css
@@ -4,7 +4,8 @@ html {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: Raleway, sans-serif;
+    font-weight: 100;
     background-image: linear-gradient(#3736A1, #8283C5);
     background-attachment: fixed;
     color: white;
@@ -118,6 +119,27 @@ code {
 .RPMClass {
     width: 80%;
     height: 600px;
+}
+
+.countdownTimer {
+    text-align: center;
+}
+
+.countdownTimer h1 {
+    margin: 60px;
+}
+
+.countdownTimer p {
+    display: inline-block;
+    border: 3px solid #f1f2f6;
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    line-height: 280px;
+    font-size: 40px;
+    color: #fff;
+    text-align: center;
+    margin: 10px;
 }
 
 @media (max-width: 990px) {
