Market product to call trade functions

--- a/client/src/theme/index.scss
+++ b/client/src/theme/index.scss
@@ -170,6 +170,11 @@ a {
     }
 }
 
+.carousel-inner {
+    width: 25rem;
+    margin: 0 auto;
+}
+
 @media (max-width: 990px) {
     .shrinkGone {
         display: none;
